--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
     <img id="banner" src="banner.jpg" alt="Banner" height="240">
 
     <h1>
-        About Jovian
+        Welcome to Jovian
     </h1>
 
     <div id="about">
